trying something out, didn't work

--- a/src/app/components/map-container/map-container.component.html
+++ b/src/app/components/map-container/map-container.component.html
@@ -39,8 +39,8 @@
           [id]="mapNode.id"
           [style.opacity]="1"
           (click)="onMapNodeClick($event, mapNode.id)"
-          (dblclick)="onMapNodeDblClick($event, mapNode.id);"
-          (pointerover)="onNodePointerOver($event, mapNode.id)"
+          (dblclick)="onMapNodeDblClick($event, mapNode.id); $event.stopPropagation();"
+          (pointerover)="onNodePointerOver($event, mapNode.id);"
         />
       </g>
     </ng-container>
